--- a/views/guest/login.hbs
+++ b/views/guest/login.hbs
@@ -49,10 +49,10 @@
     <div class="form-container">
         <h2>Student Login</h2>
         <form action="/login" method="POST">
-            <input type="text" name="name" placeholder="Enter Your Name" required>
+            <input type="number" name="uniqueId" placeholder="Enter Viva Unique ID" required>
           
-            <input type="text" name="roll" placeholder="Enter Your Roll Number" required>
-            <input type="text" name="register" placeholder="Enter register number" required>
+            <input type="number" name="roll" placeholder="Enter Your Roll Number" required>
+            <input type="number" name="register" placeholder="Enter register number" required>
             <button type="submit">Login</button>
         </form>
     </div>
