--- a/views/superadmin/home.hbs
+++ b/views/superadmin/home.hbs
@@ -121,6 +121,8 @@
   <body>
 
     <div style="display: flex; gap: 15px;">
+         <a href="/superadmin/edit" class="action-btn">➕ edit pc</a>
+          <a href="/superadmin/pc" class="action-btn">➕ ADD pc</a>
         <a href="/superadmin/addStudent" class="action-btn">➕ ADD STUDENT</a>
         <a href="/superadmin/addnewadmin" class="action-btn">👤 ADD ADMIN</a>
     </div>
